added new files and modify some to support bookings, booking status and so on